Support batching the indexes to improve speed