@@ -1,23 +1,31 @@
+/*
+ * Copyright 2002 Brinqa, Inc. All rights reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.neo4j.tool;
+
+import static org.neo4j.tool.util.Print.println;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.List;
-
 import org.apache.commons.lang3.StringUtils;
-
-import org.neo4j.driver.v1.Driver;
 import org.neo4j.tool.dto.IndexData;
-
-import lombok.val;
+import org.neo4j.tool.index.IndexManager;
 import picocli.CommandLine;
 import picocli.CommandLine.Command;
 import picocli.CommandLine.Option;
-
-import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.neo4j.tool.util.Print.println;
 
 /**
  * Rebuilds all the indexes one by one.
@@ -45,9 +53,10 @@ public class RebuildIndex extends AbstractIndexCommand {
     }
 
     @Override
-    void execute(final Driver driver) throws IOException {
-        final List<IndexData> indexes = readIndexes(driver);
-        String lastIndexName = file.isFile() ? new String(Files.readAllBytes(file.toPath()), UTF_8) : null;
+    void execute(final IndexManager indexManager) throws IOException {
+        final var indexes = indexManager.readDBIndexes();
+        final var ver = indexManager.determineVersion();
+        String lastIndexName = file.isFile() ? Files.readString(file.toPath()) : null;
         for (final IndexData index : indexes) {
 
             // skip until resume index
@@ -62,15 +71,9 @@ public class RebuildIndex extends AbstractIndexCommand {
             }
 
             // save resume file
-            Files.write(file.toPath(), index.getName().getBytes(UTF_8));
-            dropIndex(driver, index);
-            createIndexWaitForCompletion(driver, index);
+            Files.writeString(file.toPath(), index.getName());
+            indexManager.createAndMonitor(ver, index, true);
         }
         println("Last index saved to %s", this.file);
-    }
-
-    @Override
-    String getFilename() {
-        return this.file.getName();
     }
 }
